# dicebear

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  lerna.json  package-lock.json  package.json  turbo.json  vercel.json  zbpack.json
.github/workflows/: codeql.yml  deploy-editor.yml  deploy-website.yml  publish.yml  split-go-core.yml  split-php-core.yml  test.yml
apps/docs/: CLAUDE.md  README.md  env.d.ts  package.json  tsconfig.json  turbo.json
apps/docs/.vitepress/: config.ts
apps/docs/.vitepress/config/: avatarStyleSizes.ts  avatarStyles.json  avatarStyles.ts  avatarUniqueCounts.ts  sidebarDocs.ts  sidebarPlayground.ts  sidebarStyles.ts  sidebarTools.ts
apps/docs/.vitepress/playground/: store.ts
apps/docs/.vitepress/theme/: Layout.vue  index.ts  types.ts
apps/docs/pages/: index.md
apps/docs/scripts/: download-legal-pages.sh  extract-avatar-styles.ts  generate-hero-avatars.mjs
apps/editor/: .env.example  README.md  components.d.ts  eslint.config.js  index.html  package.json
apps/editor/src/: App.vue  env.d.ts  main.ts  types.ts
scripts/: publish.mjs  version.mjs
scripts/lib/: publish.mjs  version.mjs  workspace.mjs
scripts/tests/: publish.test.js  version.test.js  workspace.test.js
src/dart/core/: .gitignore  .pubignore  README.md  pubspec.yaml
src/go/core/: README.md  api_test.go  avatar.go  avatars_test.go  doc.go  error.go  go.mod  go.sum  options_descriptor.go  parity_test.go  style.go
src/js/cli/: README.md  package.json
src/js/converter/: README.md  package.json
src/js/core/: README.md  eslint.config.js  package.json  tsconfig.json
src/js/next/: .gitignore  eslint.config.js  package.json  tsconfig.json
src/php/: composer.json
src/php/core/: .gitignore  .php-cs-fixer.php  LICENSE  README.md  composer.json
src/php/src/: Avatar.php  OptionsDescriptor.php  Renderer.php  Style.php
src/python/core/: .gitignore  README.md  pyproject.toml
src/python/core/src/dicebear/: __init__.py  avatar.py  errors.py  options.py  options_descriptor.py  renderer.py  resolver.py  style.py  validator.py
src/python/core/src/dicebear/prng/: __init__.py  _prng.py  fnv1a.py  mulberry32.py
src/python/core/src/dicebear/style/: __init__.py  _style.py  color.py  meta.py  meta_creator.py  meta_license.py  meta_source.py
src/python/core/src/dicebear/style_def/: __init__.py  canvas.py  component.py  component_translate.py  component_variant.py  element.py
src/python/core/src/dicebear/utils/: __init__.py  color.py  initials.py  license.py  number.py  xml.py
src/python/core/tests/: test_avatar.py  test_options.py  test_options_descriptor.py  test_parity.py  test_prng.py  test_renderer.py  test_resolver.py  test_style.py
src/python/core/tests/utils/: test_color.py
src/rust/core/: Cargo.toml  README.md
src/rust/core/src/: avatar.rs  error.rs  lib.rs  options.rs  options_descriptor.rs  prng.rs  renderer.rs  resolver.rs  style.rs  validate.rs
src/rust/core/src/prng/: fnv1a.rs  mulberry32.rs
src/rust/core/src/style/: canvas.rs  color.rs  component.rs  component_translate.rs  component_variant.rs  element.rs  meta.rs  meta_creator.rs  meta_license.rs  meta_source.rs
src/rust/core/src/utils/: color.rs  initials.rs  license.rs  mod.rs  number.rs  xml.rs
src/rust/core/tests/: api.rs  avatars.rs  validation.rs
tests/fixtures/parity/: colors.json  fnv1a.json  generate.mjs  initials.json  mulberry32.json  numbers.json  prng.json  validation.json
tests/scripts/: publish.test.js  version.test.js  workspace.test.js
(+593 files in other folders)
